--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "mr-postcard-website",
   "version": "1.0.0",
   "type": "module",
-  "homepage": "https://charr1309.github.io/final_project",
+  "homepage": "https://charr1309.github.io/final_project/",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist -b gh-pages"
   },
   "dependencies": {
     "react": "^18.2.0",
