--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "mr-postcard-website",
   "version": "1.0.0",
   "type": "module",
-  "homepage": "https://charr1309.github.io/final_project/",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
+    "gh-pages": "^6.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-fade-in": "^2.0.1",
