--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "mr-postcard-website",
   "version": "1.0.0",
   "type": "module",
+  "homepage": "https://charr1309.github.io/final_project",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "gh-pages": "^6.1.1",
